# dargparser

./: README.md  example.py  pyproject.toml  setup.cfg  test.py
.github/scripts/: release.py
.github/workflows/: publish.yml  publish_to_test_pypi.yml  release_major.yml  release_minor.yml  release_patch.yml  test.yml  test_all.yml  test_publish.yml  test_ubuntu.yml
dargparser/: __init__.py  helpers.py  parsing.py  version.py
src/dargparser/: __init__.py  helpers.py  parsing.py  version.py
tests/: huggingface_tests.py  test_dargparser_huggingface.py
