[build-system]
requires = ["setuptools>=45", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
version_scheme = "post-release"
# local_scheme = "no-local-version"

[tool.pytest.ini_options]
pythonpath = [
  "."
]

[tool.black]
line-length = 128
target-version = ['py310']

