[metadata]
name = dargparser
description = A lean and hackable argument parser typed with dataclasses for Python.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/konstantinjdobler/dargparser
project_urls =
    Bug Tracker = https://github.com/konstantinjdobler/dargparser/issues
    Changelog = https://github.com/konstantinjdobler/dargparser/releases
classifiers =
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    License :: OSI Approved :: Apache Software License
    Intended Audience :: Developers

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.7
zip_safe = True

[options.packages.find]
where = src
exclude =
    tests

[options.entry_points]
console_scripts =
    dargparser = dargparser.version:entry_point